v.3.3.3 bugfix: proper .gaps support with .flex.reverse flag

--- a/src/flexbox.scss
+++ b/src/flexbox.scss
@@ -80,11 +80,21 @@ $flexbox-col-selector: unquote("col-") !default;
   // gaps
   &.gaps {
     $gap: var(--flex-gap, #{$flexbox-gap-default});
-    &.column > :not(:last-child) {
-      margin-bottom: $gap;
+    &.column {
+      &:not(.reverse) > :not(:last-child) {
+        margin-bottom: $gap;
+      }
+      &.reverse > :not(:last-child) {
+        margin-top: $gap;
+      }
     }
-    &:not(.column) > :not(:last-child) {
-      margin-right: $gap;
+    &:not(.column) {
+      &:not(.reverse) > :not(:last-child) {
+        margin-right: $gap;
+      }
+      &.reverse > :not(:last-child) {
+        margin-left: $gap;
+      }
     }
   }
 
